--- a/tools/Makefile.tools
+++ b/tools/Makefile.tools
@@ -1,6 +1,6 @@
 
 
-AM_CFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump"
-AM_CXXFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump"
+AM_CFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump" $(CFLAGS)
+AM_CXXFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump" $(CPPFLAGS)
 AM_LDFLAGS=-L"$(top_srcdir)/lib" -L"$(top_srcdir)/libpacketdump" \
-       -ltrace @TOOLS_LIBS@
+       $(LDFLAGS) -ltrace @TOOLS_LIBS@
