--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -55,7 +55,7 @@ jobs:
         sudo apt update
         sudo apt-get -y install flex bison libpcap0.8-dev libtool pkgconf autoconf automake m4 gcc gcc-multilib
         sudo apt-get -y install build-essential dpdk-dev libelf-dev git libyaml-dev libssl-dev
-        sudo apt-get -y install uthash-dev linux-tools-common lzma-dev libbz2-dev
+        sudo apt-get -y install uthash-dev linux-tools-common liblzma-dev libbz2-dev
     - name: Install PF_RING
       run: |
         sudo apt-get -y install software-properties-common wget
