CI: ensure we checkout submodules when cloning xdp repo
This ensures that the XDP build will have access to a usable
version of libbpf on older OS distros (e.g. ubuntu 22.04).

--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -70,6 +70,7 @@ jobs:
       with:
         path: xdp-tools
         repository: xdp-project/xdp-tools
+        submodules: true
     - name: Build/Install libxdp
       env:
         BUILDOS: ${{ matrix.os }}
