CI: try to force usage of submodule for libbpf during xdp build

--- a/.github/workflows/libtrace.yaml
+++ b/.github/workflows/libtrace.yaml
@@ -112,7 +112,7 @@ jobs:
         if [ "${BUILDOS}" == "ubuntu-18.04" ]; then
             git fetch && git checkout v1.2
         fi
-        ./configure
+        FORCE_SUBDIR_LIBBPF=1 ./configure
         sudo make -j 3 libxdp_install
         sudo ldconfig
     - name: Checkout Libtrace
