--- a/.github/workflows/rpm-build.yaml
+++ b/.github/workflows/rpm-build.yaml
@@ -21,11 +21,6 @@ jobs:
            - almalinux:10
 
      steps:
-      - name: Extract RHEL release
-        run: |
-            MINOR=$(echo "${{ matrix.target }}" | grep -oP '(?<=almalinux:[89]\.)\d+')
-            MAJOR=$(echo "${{ matrix.target }}" | grep -oP '(?<=almalinux:)[89]')
-            echo "RHEL_RELEASE=.el${MAJOR}_${MINOR}" >> $GITHUB_ENV
       - name: Checkout repo
         uses: actions/checkout@v4
       - name: Install prereq packages
@@ -62,10 +57,6 @@ jobs:
      steps:
        - name: Set environment variables for download
          run: echo DIRNAME=${{ matrix.target }} | tr ':' '_' >> $GITHUB_ENV
-       - name: Extract RHEL release
-         run: |
-            MAJOR=$(echo "${{ matrix.target }}" | grep -oP '(?<=almalinux:)[89]')
-            echo "MAJOR=${MAJOR}" >> $GITHUB_ENV
        - name: Download artifact
          uses: actions/download-artifact@v4
          with:
@@ -76,13 +67,9 @@ jobs:
          run: |
            curl -1sLf 'https://dl.cloudsmith.io/public/wand/libwandio/cfg/setup/bash.rpm.sh' | bash
            curl -1sLf 'https://dl.cloudsmith.io/public/wand/libwandder/cfg/setup/bash.rpm.sh' | bash
-           if [[ "${MAJOR}" == "8" ]]; then
-               dnf config-manager --enable powertools || true
-               dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm || true
-           elif [[ "${MAJOR}" == "9" ]]; then
-               dnf config-manager --enable crb || true
-               dnf install -y https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm || true
-           fi
+           dnf install -y dnf-plugins-core epel-release || true
+           dnf config-manager --set-enabled powertools || true
+           /usr/bin/crb enable || true
        - name: Test package install
          run: |
            yum install -y findutils
@@ -96,7 +83,7 @@ jobs:
            rpm -e libtrace4
 
   publish:
-     runs-on: ubuntu-22.04
+     runs-on: ubuntu-latest
      container:
        image: ${{ matrix.target }}
      strategy:
@@ -110,11 +97,6 @@ jobs:
            - almalinux:10
      needs: test
      steps:
-       - name: Set RHEL version number
-         run: |
-            MINOR=$(echo "${{ matrix.target }}" | grep -oP '(?<=almalinux:[89]\.)\d+')
-            MAJOR=$(echo "${{ matrix.target }}" | grep -oP '(?<=almalinux:)[89]')
-            echo "MAJOR={MAJOR}" >> $GITHUB_ENV
        - name: Set environment variables for download
          run: echo DIRNAME=${{ matrix.target }} | tr ':' '_' >> $GITHUB_ENV
        - name: Download artifact
